# Trinity_Detector_Sim

./: .gitignore  run_script.slurm  run_script2.slurm  runscript.sh
Trinity_fullchain/root/.singularity.d/: Singularity  labels.json  runscript
Trinity_fullchain/root/.singularity.d/bootstrap_history/: Apptainer0
Trinity_fullchain/root/.singularity.d/env/: 10-docker2singularity.sh  90-environment.sh
Trinity_fullchain/root/root/: .wget-hsts
Trinity_fullchain/root/root/TrinitySims/: README.md
Trinity_fullchain/root/root/TrinitySims/BatchSubmissionScripts/: Prepare_TrinityISOGSimulations.sh  README.md  ShowerSimulationsCARE.sh  ShowerSimulationsCHASM.sh  ShowerSimulationsCIOReader.sh  ShowerSimulationsGrOptics.sh  executeCARE.sh  executeCHASM.sh  executeCIO.sh  executeGRO.sh  safe_event_merge_root_files.py
Trinity_fullchain/root/root/TrinitySims/BatchSubmissionScripts/Hive_SequentialChainJobPerShower/: Submit_TrinityShowersMCChainJobs_Slurm_Indiv.sh  runTrinityShowersMCSequentialChain.sh  runTrinityShowersMCSequentialChain_2.sh  runTrinityShowersMCSequentialChain_noroot.sh
Trinity_fullchain/root/root/TrinitySims/CARE/: CameraAndReadout  Makefile.depend
Trinity_fullchain/root/root/TrinitySims/CARE/VBF-0.3.4-c-17/: .gitignore  AUTHORS  AddCopyright.scr  CMakeLists.txt  COPYING  COPYRIGHT.txt  ChangeLog  Makefile  Makefile.am  Makefile.in  README  VBF.pc.in  VBF_cmake.pc.in  aclocal.m4  change_to_c17.py  config.status  configure  configure.ac  libtool
Trinity_fullchain/root/root/TrinitySims/CARE/VBF-0.3.4-c-17/VBF/: Adler32.c  Adler32.h  Adler32.lo  CMakeLists.txt  FPAdler.h  FPBasics.cpp  FPBasics.h  FPBasics.lo  FPFDRead.cpp  FPFDRead.lo  FPFDWrite.cpp  FPFDWrite.lo  FPIO.cpp  FPIO.lo  FPIOCommon.c  FPIOCommon.h  FPIOCommon.lo  FPIOStats.cpp  FPIOStats.lo  Makefile  Makefile.am  Makefile.in  VArrayEvent.cpp  VArrayEvent.lo  VBankFileBzip2Reader.cpp  VBankFileBzip2Reader.h  VBankFileBzip2Reader.lo  VBankFileGzipReader.cpp  VBankFileGzipReader.lo  VBankFileReader.cpp  VBankFileReader.h  VBankFileReader.lo  VBankFileStreamReader.cpp  VBankFileStreamReader.h  VBankFileStreamReader.lo  VBankFileWriter.cpp  VBankFileWriter.lo  VBitParser.cpp  VBitParser.h  VBitParser.lo  (+39 more)
Trinity_fullchain/root/root/TrinitySims/CARE/VBF-0.3.4-c-17/VBF/.deps/: Adler32.Plo  FPBasics.Plo  FPFDRead.Plo  FPFDWrite.Plo  FPIO.Plo  FPIOCommon.Plo  FPIOStats.Plo  VArrayEvent.Plo  VBankFileBzip2Reader.Plo  VBankFileGzipReader.Plo  VBankFileReader.Plo  VBankFileStreamReader.Plo  VBankFileWriter.Plo  VBitParser.Plo  VChiLASimulationData.Plo  VChiLASimulationHeader.Plo  VCorsikaSimulationData.Plo  VDatum.Plo  VEventOverflow.Plo  VException.Plo  VGPSDecoder.Plo  VKascadeSimulationData.Plo  VKascadeSimulationHeader.Plo  VRawDataExceptions.Plo  VRawDataFileRead.Plo  VRawEventParser.Plo  VSimulationData.Plo  VSimulationHeader.Plo
Trinity_fullchain/root/root/TrinitySims/CARE/VBF-0.3.4-c-17/VBF/.libs/: libVBF.la
Trinity_fullchain/root/root/TrinitySims/CARE/VBF-0.3.4-c-17/examples/: MakeBogusFile.cpp  MakeBogusFileWithCorsikaSimulationData.cpp  Makefile  PrintCorsikaSimulationData.cpp  PrintEvents.cpp  PrintGPSTime.cpp  PrintSpecificEvent.cpp  ProtoEventCount.cpp  ProtoEventPrint.cpp  README
Trinity_fullchain/root/root/TrinitySims/CARE/VBF-0.3.4-c-17/scripts/: Makefile  Makefile.am  Makefile.in  vbfCalcThreshold3
Trinity_fullchain/root/root/TrinitySims/CARE/VBF-0.3.4-c-17/vbfTools/: Makefile  Makefile.am  Makefile.in  vbfCheck  vbfCheck.cpp  vbfConfig  vbfConfig.c  vbfList  vbfList.cpp  vbfPed  vbfPed.cpp  vbfReindex  vbfReindex.cpp  vbfRepTel  vbfRepTel.cpp  vbfSummary  vbfSummary.cpp  vbfZeroSup  vbfZeroSup.cpp  vbfZip  vbfZip.cpp
Trinity_fullchain/root/root/TrinitySims/CARE/VBF-0.3.4-c-17/vbfTools/.deps/: vbfCheck.Po  vbfConfig-vbfConfig.Po  vbfList.Po  vbfPed.Po  vbfReindex.Po  vbfRepTel.Po  vbfSummary.Po  vbfZeroSup.Po  vbfZip.Po
Trinity_fullchain/root/root/TrinitySims/CARE/VBF-0.3.4-c-17/vbfTools/.libs/: vbfList  vbfRepTel  vbfSummary  vbfZip
Trinity_fullchain/root/root/TrinitySims/CARE/config/: Trinity_Demonstrator_CARE.cfg
Trinity_fullchain/root/root/TrinitySims/CARE/lib/: libVBF.la  libVBF.so.1.0.1
Trinity_fullchain/root/root/TrinitySims/CHASM_NuSpacesim/: MODTRAN.py  abstable_analysis.txt  austincode.py  convert_modtran_to_chasm.py  generate_optical_depth.py  plotLotsOfCoeff.py
Trinity_fullchain/root/root/TrinitySims/CHASM_NuSpacesim/debugging_and_analysis/: ANALYSIS_SUMMARY.md  read_corsika_eventio.py  testfile_m5atmo.cph  visualize_atmo_LUT.py
Trinity_fullchain/root/root/TrinitySims/CHASM_NuSpacesim/demo/: RunCHASM.py  RunCHASMSPB2Draw.py  RunManual.py  RunSamples.py  plot_atmabs_compare.py  simple_corsika_plotter.py
Trinity_fullchain/root/root/TrinitySims/CHASM_NuSpacesim/tests/: test_abstable.py  test_abstable_pytest.py
Trinity_fullchain/root/root/TrinitySims/GrOptics/: Makefile  Makefile.bak  Makefile.common  Makefile.depend  PlotCamera.cpp  grOptics
Trinity_fullchain/root/root/TrinitySims/GrOptics/Config/: TDEMSimulation.pilot  TDEMTelescopes.cfg  arrayConfig.cfg  arrayConfigTDEM.cfg  d50TDEMSimulation.pilot  (+1 more)
Trinity_fullchain/root/root/TrinitySims/StandAlone/: ShowerSimulations.sh.demo  ShowerSimulationsCARE.sh  ShowerSimulationsCHASM.sh  ShowerSimulationsCHASMDraw.sh  ShowerSimulationsCIOReader.sh  ShowerSimulationsFullChain.sh  ShowerSimulationsGrOptics.sh  ShowerSimulationsIFHB.sh  ShowerSimulationsISOG.sh  ShowerSimulationsParseCIOOut.sh  SubmitShowerSimulations.sh  Submit_TrinityShowersMCChainJobs_Slurm.sh  executeCARE.sh  executeCHASM.sh  executeCHASMDraw.sh  executeCIO.sh  executeFullChain.sh  executeGRO.sh  executeIFHB.sh  executeISOG.sh  executePyLauncher.sh  executePyLauncher_CARE.sh  executePyLauncher_CHASM.sh  executePyLauncher_CIO.sh  executePyLauncher_GRO.sh  runTrinityShowersMCSequentialChain.slurm.sh
Trinity_fullchain/root/root/TrinitySims/corsikaIOreader/: Makefile  README.md  corsikaIOreader
Trinity_fullchain/root/root/TrinitySims/ifhb/: .gitignore  AngleLUTGeneration.cpp  IFHB.pilot  ISOG.pilot  ISOG_Testing.pilot  Makefile  README.md
(+106 files in other folders)
